# Vista

VistaCoreLibs/: BUILDINFO  CMakeLists.txt  README
VistaCoreLibs/Documentation/: Doxyfile
VistaCoreLibs/Tests/: CMakeLists.txt  VistaBase64Test.cpp  VistaConversionTest.cpp  VistaMathBasicsTest.cpp  VistaReflectionableTest.cpp  VistaSerializablesTest.cpp  VistaTestRotations.h  VistaTestingUtils.h  VistaTestingUtilsTest.cpp  VistaVector3DTest.cpp  VistaVectorMathTest.cpp
VistaCoreLibs/VistaAspects/: CMakeLists.txt  Doxyfile  VistaAspectsConfig.h  VistaAspectsOut.cpp  VistaAspectsOut.h  VistaAspectsUtils.cpp  VistaAspectsUtils.h  VistaConversion.cpp  VistaConversion.h  VistaDeSerializer.cpp  VistaDeSerializer.h  VistaExplicitCallbackInterface.cpp  VistaExplicitCallbackInterface.h  VistaGenericFactory.h  VistaIniFileParser.cpp  VistaIniFileParser.h  VistaLocatable.cpp  VistaLocatable.h  VistaMarshalledObjectFactory.cpp  VistaMarshalledObjectFactory.h  VistaNameable.cpp  VistaNameable.h  VistaObjectRegistry.cpp  VistaObjectRegistry.h  VistaObserveable.cpp  VistaObserveable.h  VistaObserver.cpp  VistaObserver.h  VistaProperty.cpp  VistaProperty.h  VistaPropertyAwareable.cpp  VistaPropertyAwareable.h  VistaPropertyFunctor.cpp  VistaPropertyFunctor.h  VistaPropertyFunctorRegistry.cpp  VistaPropertyFunctorRegistry.h  VistaPropertyList.cpp  VistaPropertyList.h  VistaReferenceCountable.cpp  VistaReferenceCountable.h  (+12 more)
VistaCoreLibs/VistaBase/: CMakeLists.txt  Doxyfile  LICENSE  LICENSE.LESSER  VistaAtomicCounter.cpp  VistaAtomicCounter.h  VistaAutoBuffer.cpp  VistaAutoBuffer.h  VistaAutoBufferPool.cpp  VistaAutoBufferPool.h  VistaBaseConfig.h  VistaBaseMain.cpp  VistaBaseOut.cpp  VistaBaseOut.h  VistaBaseTypes.h  VistaColor.cpp  VistaColor.h  VistaDefaultTimerImp.cpp  VistaDefaultTimerImp.h  VistaExceptionBase.cpp  VistaExceptionBase.h  VistaMathBasics.h  VistaQuaternion.cpp  VistaQuaternion.h  VistaReferenceFrame.cpp  VistaReferenceFrame.h  VistaStreamManager.cpp  VistaStreamManager.h  VistaStreamUtils.cpp  VistaStreamUtils.h  VistaStreams.cpp  VistaStreams.h  VistaTimeUtils.cpp  VistaTimeUtils.h  VistaTimer.cpp  VistaTimer.h  VistaTimerImp.cpp  VistaTimerImp.h  VistaTransformMatrix.cpp  VistaTransformMatrix.h  (+6 more)
VistaCoreLibs/VistaBuild/: Makefile  Makefile.COMMON  Makefile.VistaCoreLibs  Makefile.build
VistaCoreLibs/VistaDataFlowNet/: CMakeLists.txt  Vdfn3DNormalizeNode.cpp  Vdfn3DNormalizeNode.h  VdfnAbsoluteNode.h  VdfnActionNode.cpp  VdfnActionNode.h  VdfnActionObject.cpp  VdfnActionObject.h  VdfnAggregateNode.cpp  VdfnAggregateNode.h  VdfnApplyTransformNode.cpp  VdfnApplyTransformNode.h  VdfnAxisRotateNode.cpp  VdfnAxisRotateNode.h  VdfnBinaryOpNode.cpp  VdfnBinaryOpNode.h  VdfnBinaryOps.h  VdfnChangeDetectNode.cpp  VdfnChangeDetectNode.h  VdfnCompose3DVectorNode.cpp  VdfnCompose3DVectorNode.h  VdfnCompositeNode.cpp  VdfnCompositeNode.h  VdfnConditionalRouteNode.cpp  VdfnConditionalRouteNode.h  VdfnConfig.h  VdfnConstantValueNode.cpp  VdfnConstantValueNode.h  VdfnCounterNode.cpp  VdfnCounterNode.h  VdfnDecompose3DVectorNode.cpp  VdfnDecompose3DVectorNode.h  VdfnDelayNode.cpp  VdfnDelayNode.h  VdfnDemultiplexNode.cpp  VdfnDemultiplexNode.h  VdfnDifferenceNode.h  VdfnDriverSensorNode.cpp  VdfnDriverSensorNode.h  VdfnDumpHistoryNode.cpp  (+84 more)
VistaCoreLibs/VistaDeviceDrivers/: CMakeLists.txt  Makefile
VistaCoreLibs/VistaDeviceDriversBase/: CMakeLists.txt  LICENSE.LESSER  VistaConnectionUpdater.cpp  VistaConnectionUpdater.h  VistaDeviceDriver.cpp  VistaDeviceDriver.h  VistaDeviceDriverAspectRegistry.cpp  VistaDeviceDriverAspectRegistry.h  VistaDeviceDriversConfig.h  VistaDeviceDriversOut.cpp  VistaDeviceDriversOut.h  VistaDeviceIdentificationAspect.cpp  VistaDeviceIdentificationAspect.h  VistaDeviceSensor.cpp  VistaDeviceSensor.h  VistaDriverAbstractWindowAspect.cpp  VistaDriverAbstractWindowAspect.h  VistaDriverConnectionAspect.cpp  VistaDriverConnectionAspect.h  VistaDriverForceFeedbackAspect.cpp  VistaDriverForceFeedbackAspect.h  VistaDriverGenericParameterAspect.cpp  VistaDriverGenericParameterAspect.h  VistaDriverInfoAspect.cpp  VistaDriverInfoAspect.h  VistaDriverLoggingAspect.cpp  VistaDriverLoggingAspect.h  VistaDriverManager.cpp  VistaDriverManager.h  VistaDriverMap.cpp  VistaDriverMap.h  VistaDriverMeasureHistoryAspect.cpp  VistaDriverMeasureHistoryAspect.h  VistaDriverPlugDev.h  VistaDriverProtocolAspect.h  VistaDriverReferenceFrameAspect.h  VistaDriverSensorMappingAspect.cpp  VistaDriverSensorMappingAspect.h  VistaDriverThreadAspect.cpp  VistaDriverThreadAspect.h  (+10 more)
VistaCoreLibs/VistaInterProcComm/: CMakeLists.txt  Doxyfile  VistaInterProcCommConfig.h  VistaInterProcCommOut.cpp  VistaInterProcCommOut.h  _SourceFiles.cmake
VistaCoreLibs/VistaKernel/: CMakeLists.txt  Doxyfile  LICENSE  VistaClientDataTunnel.cpp  VistaClientDataTunnel.h  VistaClusterAux.cpp  VistaClusterAux.h  VistaClusterClient.cpp  VistaClusterClient.h  VistaClusterMaster.cpp  VistaClusterMaster.h  VistaClusterServer.cpp  VistaClusterServer.h  VistaClusterSlave.cpp  VistaClusterSlave.h  VistaDataTunnel.cpp  VistaDataTunnel.h  VistaDataTunnelFactory.cpp  VistaDataTunnelFactory.h  VistaDriverPropertyConfigurator.cpp  VistaDriverPropertyConfigurator.h  VistaErrorMsgHandler.h  VistaFrameLoop.cpp  VistaFrameLoop.h  VistaKernelConfig.h  VistaKernelMsgPort.cpp  VistaKernelMsgPort.h  VistaKernelMsgTab.h  VistaKernelOut.cpp  VistaKernelOut.h  VistaMasterDataTunnel.cpp  VistaMasterDataTunnel.h  VistaStandaloneDataTunnel.cpp  VistaStandaloneDataTunnel.h  VistaSystem.cpp  VistaSystem.h  VistaSystemClassFactory.h  VistaSystemCommands.cpp  VistaSystemCommands.h  VistaSystemConfigurators.cpp  (+3 more)
VistaCoreLibs/VistaKernelOpenSGExt/: CMakeLists.txt  Doxyfile  VistaKernelOpenSGExtConfig.h  VistaKernelOpenSGExtOut.cpp  VistaKernelOpenSGExtOut.h  VistaOpenSGGeometryTools.cpp  VistaOpenSGGeometryTools.h  VistaOpenSGGraphicsStatsOverlay.cpp  VistaOpenSGGraphicsStatsOverlay.h  VistaOpenSGMaterialTools.cpp  VistaOpenSGMaterialTools.h  (+24 more)
VistaDemo/: CMakeLists.txt  master_cave.sh  readme.txt  slave_cave.sh  startslaves_cave.sh
(+1452 files in other folders)
