cmake_minimum_required(VERSION 2.6)
project(BuildAllVistaDemos)

# Let the user decide which Demos to build
# Default is to build all Demos
set(BUILD_KEYBOARDDEMO      ON CACHE BOOL "Build the keyboard demo")
set(BUILD_GEOMETRYDEMO      ON CACHE BOOL "Build the geometry demo")
set(BUILD_TEXTDEMO          ON CACHE BOOL "Build the text demo")
set(BUILD_LOADDEMO          ON CACHE BOOL "Build the load demo")
# set(BUILD_INTERACTIONDEMO             ON CACHE BOOL "Build the Demo")
set(BUILD_CAMERACONTROLDEMO ON CACHE BOOL "Build the camera control demo")
set(BUILD_OVERLAYDEMO       ON CACHE BOOL "Build the overlay demo")
set(BUILD_EVENTDEMO         ON CACHE BOOL "Build the event demo")
set(BUILD_DISPLAYDEMO       ON CACHE BOOL "Build the display demo")
set(BUILD_OGLDEMO           ON CACHE BOOL "Build the OpenGL demo")
set(BUILD_INTENSELECTDEMO   ON CACHE BOOL "Build the IntentionSelect demo")
set(BUILD_OPENSGEXTDEMOS    ON CACHE BOOL "Build the OpenSG extension demos")
set(BUILD_VTKDEMO           ON CACHE BOOL "Build the VTK demo")

# Build libraries
if(BUILD_KEYBOARDDEMO)
    add_subdirectory(01KeyboardDemo)
endif(BUILD_KEYBOARDDEMO)
if(BUILD_GEOMETRYDEMO)
    add_subdirectory(02GeometryDemo)
endif(BUILD_GEOMETRYDEMO)
if(BUILD_TEXTDEMO)
	add_subdirectory(03TextDemo)
endif(BUILD_TEXTDEMO) 
if(BUILD_LOADDEMO)
	add_subdirectory(04LoadDemo)
endif(BUILD_LOADDEMO) 
# if(BUILD_INTERACTIONDEMO)
# 	add_subdirectory(05InteractionDemo)
# endif(BUILD_INTERACTIONDEMO) 
if(BUILD_CAMERACONTROLDEMO)
	add_subdirectory(06CameraControlDemo)
endif(BUILD_CAMERACONTROLDEMO) 
if(BUILD_OVERLAYDEMO)
	add_subdirectory(07OverlayDemo)
endif(BUILD_OVERLAYDEMO) 
if(BUILD_EVENTDEMO)
	add_subdirectory(09EventDemo)
endif(BUILD_EVENTDEMO) 
if(BUILD_DISPLAYDEMO)
	add_subdirectory(10DisplayDemo)
endif(BUILD_DISPLAYDEMO) 
if(BUILD_OGLDEMO)
	add_subdirectory(11OGLDemo)
endif(BUILD_OGLDEMO) 
if(BUILD_INTENSELECTDEMO)
    add_subdirectory(12IntentionSelectDemo)
endif(BUILD_INTENSELECTDEMO)
if(BUILD_OPENSGEXTDEMOS)
    add_subdirectory(13KernelOpenSGExtDemo)
endif(BUILD_OPENSGEXTDEMOS)
if(BUILD_VTKDEMO)
    add_subdirectory(15VtkDemo)
endif(BUILD_VTKDEMO)
